--- a/visualize.ipynb
+++ b/visualize.ipynb
@@ -2,9 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 0,
+   "execution_count": 1,
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "ExecuteTime": {
+     "end_time": "2023-06-03T18:50:41.308921700Z",
+     "start_time": "2023-06-03T18:50:33.997068Z"
+    }
    },
    "outputs": [],
    "source": [
@@ -34,8 +38,8 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-06-02T04:36:43.011065200Z",
-     "start_time": "2023-06-02T04:36:12.803714900Z"
+     "end_time": "2023-06-03T18:51:03.195517200Z",
+     "start_time": "2023-06-03T18:50:41.309880300Z"
     }
    }
   },
@@ -45,15 +49,12 @@
    "outputs": [],
    "source": [
     "## COMPUTATIONALLY EXPENSIVE. WILL TAKE VERY LONG TIME TO RUN\n",
+    "## Uncomment the cell to run the code\n",
     "# sns.pairplot(df)\n",
     "# plt.show()"
    ],
    "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2023-06-02T04:36:43.027366900Z",
-     "start_time": "2023-06-02T04:36:43.017488100Z"
-    }
+    "collapsed": false
    }
   },
   {
@@ -67,11 +68,7 @@
     "categorical_attributes = [col for col in df.columns if df[col].dtype == 'object']"
    ],
    "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2023-06-02T04:36:43.059403300Z",
-     "start_time": "2023-06-02T04:36:43.029317800Z"
-    }
+    "collapsed": false
    }
   },
   {
@@ -90,11 +87,7 @@
     "print('shape of original dataset: ', df.shape)"
    ],
    "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2023-06-02T04:36:43.073880100Z",
-     "start_time": "2023-06-02T04:36:43.061463Z"
-    }
+    "collapsed": false
    }
   },
   {
@@ -116,11 +109,7 @@
     "      f'{len(categorical_attributes) + len(discrete_attributes) + len(continuous_attributes)}')"
    ],
    "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2023-06-02T04:36:43.117387900Z",
-     "start_time": "2023-06-02T04:36:43.078016800Z"
-    }
+    "collapsed": false
    }
   },
   {
@@ -259,11 +248,7 @@
     "    plt.show()"
    ],
    "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2023-06-02T04:37:10.226019400Z",
-     "start_time": "2023-06-02T04:36:43.095876Z"
-    }
+    "collapsed": false
    }
   },
   {
@@ -272,6 +257,7 @@
    "outputs": [],
    "source": [
     "## Computationally EXPENSIVE. WILL TAKE VERY LONG TIME TO RUN\n",
+    "## Uncomment the cell to run the code\n",
     "\n",
     "# for att in categorical_attributes:\n",
     "#     df[att].value_counts().plot.barh()\n",
@@ -280,46 +266,7 @@
     "#     plt.show()"
    ],
    "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2023-06-02T04:37:10.295663600Z",
-     "start_time": "2023-06-02T04:37:10.230259600Z"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "outputs": [],
-   "source": [
-    "# auto encoder\n",
-    "X = df\n",
-    "y = df['attack']\n",
-    "X_train, X_test, *labels = train_test_split(X, y, test_size=0.2, random_state=42)"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2023-06-02T04:37:28.746785700Z",
-     "start_time": "2023-06-02T04:37:21.383052400Z"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
-   "source": [
-    "K.clear_session()\n",
-    "model = Sequential()\n",
-    "model.add(Dense(64, input_shape=(X_train.shape[1],)))\n",
-    "model.add(Dense(64, input_shape=(X_train.shape[1],)))"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "start_time": "2023-06-02T04:37:11.819506500Z"
-    }
+    "collapsed": false
    }
   }
  ],
